2009-11-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Handled
	  possible null reference exception.

2009-11-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/GapBuffer.cs: Fixed 'Bug 552562 - Crasher in
	  auto-save thread'.

2009-11-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Fixed 'Bug 552778 - Redraw
	  issues when scrolling with mouse wheel'.

2009-11-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Only render the lines once in
	  an update - this should fix many of the slowness complaints.

2009-11-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: Handled possible endless loop
	  in ScrollToCaret.

2009-11-04  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/GapBuffer.cs: gap buffer is now threadsafe.

2009-11-04  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/DashedLineMargin.cs: fixed 'Bug 548035 -
	  Dashed line down left margin is uneven'.

2009-11-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Disable pulse on
	  inserting matching brace.

2009-11-02  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/DefaultEditActions.cs: fixed 'Bug 551674 -
	  Tab key doesn't always create correct number of spaces'.

2009-11-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/DashedLineMargin.cs: Fix "Bug 548035 -
	  Dashed line down left margin is uneven" by rendering solid
	  background before rendering dashes.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj: Reference Mono.Cairo package.

	* gtk-gui/generated.cs: Flush.

2009-10-29  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 550943 -
	  Search highlighting can get out of sync'.

2009-10-22  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs: